snapshots/syntax/library/statements/rmdir/rmdir_at_module_level.snap
---
source: src/syntax/library/statements/filesystem/rmdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RmDirStatement
      children:
        - kind: RmDirKeyword
          text: RmDir
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"C:\\Temp\""
