snapshots/syntax/library/statements/rmdir/rmdir_in_select_case.snap
---
source: src/syntax/library/statements/rmdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: action
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"cleanup\""
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: RmDirStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: RmDirKeyword
                              text: RmDir
                            - kind: Whitespace
                              text: " "
                            - kind: StringLiteral
                              text: "\"C:\\Temp\""
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"archive\""
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: RmDirStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: RmDirKeyword
                              text: RmDir
                            - kind: Whitespace
                              text: " "
                            - kind: StringLiteral
                              text: "\"C:\\Archive\\Old\""
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseElseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: ElseKeyword
                      text: Else
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: RmDirStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: RmDirKeyword
                              text: RmDir
                            - kind: Whitespace
                              text: " "
                            - kind: Identifier
                              text: defaultPath
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
